--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,1 +1,6 @@
-Job Index
+<h1>Job Index</h1>
+<% @jobs.each do |job| %>
+  <hr />
+  <p><%= job.title %></p>
+  <p><%= job.description %></p>
+<% end %>
