--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Job Index</h1>
+<a href="/jobs/new">New Job Posting</a>
 <% if @jobs.empty? %>
   <p>No active jobs.</p>
 <% else %>
@@ -8,3 +9,4 @@
     <p><%= job.description %></p>
   <% end %>
 <% end %>
+
