--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         </ul>
          <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href= "#" class="nav-link active"> Login </a>
+            <a href= "<%= url_for(controller: 'users', action: 'new') %>" class="nav-link active"> Login </a>
           </li> 
         </ul>
          <ul class="navbar-nav">
