--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,17 +28,17 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href= "#" class="nav-link active"> Home </a>
+            <a href= "<%= url_for(controller: 'jobs', action: 'index' ) %>" class="nav-link active"> Home </a>
           </li> 
         </ul>
          <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href= "#" class="nav-link active"> Login </a>
+            <a href= "<%= url_for(controller: 'users', action: 'new' ) %>" class="nav-link active"> Login </a>
           </li> 
         </ul>
          <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href= "#" class="nav-link active"> Companies </a>
+            <a href= "<%= url_for(controller: 'companies', action: 'index' ) %>" class="nav-link active"> Companies </a>
           </li> 
         </ul>
        </div>
