--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <nav class= "navbar navbar-expand-sm navbar-light bg-primary">
-      <a href="#" class="navbar-brand mb-0 "> <img src="https://w7.pngwing.com/pngs/610/106/png-transparent-brand-line-line-angle-text-logo-thumbnail.png" width="50" height="50"/>NavBar</a>
+    <nav class= "navbar navbar-expand-md navbar-light bg-primary">
+      <a href="#" class="navbar-brand mb-0 "> <img src="https://w7.pngwing.com/pngs/610/106/png-transparent-brand-line-line-angle-text-logo-thumbnail.png" width="50" height="50"/>Menu</a>
 
       <button
         type="button"
@@ -33,7 +33,12 @@
         </ul>
          <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href= "<%= url_for(controller: 'users', action: 'new' ) %>" class="nav-link active"> Login </a>
+            <a href= "<%= url_for(controller: 'users', action: 'new' ) %>" class="nav-link active"> Signup </a>
+          </li> 
+        </ul>
+         <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a href= "<%= url_for(controller: 'sessions', action: 'new' ) %>" class="nav-link active"> Login </a>
           </li> 
         </ul>
          <ul class="navbar-nav">
