--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -15,7 +15,7 @@
       <form action="<%= url_for(controller: 'tags', action: 'create') %>" method="post">
         <input type="text" name="name">
         <input type="hidden" name="job_id" value="<%= job.id %>">
-        <input type="submit" value="Add Tag">
+        <input type="submit" value="Add Tag" onclick="location.reload()">
       </form>
     <% end %>
     <p><%= job.description %></p>
