--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Job Index</h1>
 <a href="/jobs/new">New Job Posting</a>
+<%= search_form_for @q, url: :jobs do |form| %>
+  <div class="form-group">
+    <%= form.label :search_by_title %>
+    <%= form.text_field :title_cont %>
+  </div>
+
+  <div class="form-group">
+  <%= form.submit 'Search Job', class: 'btn btn-primary btn-md' %>
+  </div>
+  
+<% end %>
 <h1>Job Board</h1>
 <% if @jobs.empty? %>
   <p>No active jobs.</p>
