--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,12 +44,19 @@
          <ul class="navbar-nav">
           <li class="nav-item active">
             <a href= "<%= url_for(controller: 'companies', action: 'index' ) %>" class="nav-link active"> Companies </a>
-        </ul>
       </div>
       <form class="d-flex">
         <input type="text" class="form-control me-2">
         <button type="submit" class="btn btn-primary"> Search</button>
       </form>
+
+     </ul>
+         <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a href= "#" class="nav-link active"> <%= current_user.name %> </a>
+        </ul>
+
+
     </nav>
     <%= yield %>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
