--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,11 @@
         <button type="submit" class="btn btn-primary"> Search</button>
       </form>
 
-     </ul>
-         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a href= "#" class="nav-link active"> <%= current_user.name %> </a>
-        </ul>
+      </ul class="navbar-nav">
+        <li class="nav-item active">
+          <a href= "#" class="nav-link active"> <%= current_user&.name %> </a>
+        </li>
+      </ul>
 
 
     </nav>
