--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,12 @@
         <button type="submit" class="btn btn-primary"> Search</button>
       </form>
 
-     </ul>
-         <ul class="navbar-nav">
+
+        <ul class="navbar-nav">
           <li class="nav-item active">
-            <a href= "#" class="nav-link active"> <%= current_user.name %> </a>
+          <a href= "<%= url_for(controller: 'profiles', action: 'index' ) %>" class="nav-link active"> <%= current_user.name %> </a>
         </ul>
+      
 
 
     </nav>
