--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <nav class= "navbar navbar-expand-md navbar-light bg-primary">
-      <a href="#" class="navbar-brand mb-0 "> <img src="https://w7.pngwing.com/pngs/610/106/png-transparent-brand-line-line-angle-text-logo-thumbnail.png" width="50" height="50"/>Menu</a>
+      <a href="#" class="navbar-brand mb-0 "> <img src="https://w7.pngwing.com/pngs/610/106/png-transparent-brand-line-line-angle-text-logo-thumbnail.png" width="50" height="50"/></a>
 
       <button
         type="button"
@@ -46,16 +46,13 @@
           <% end %>
         </ul>
       </div>
-      <form class="d-flex">
+      <%# <form class="d-flex">
         <input type="text" class="form-control me-2">
         <button type="submit" class="btn btn-primary"> Search</button>
-      </form>
+      </form> %>
 
-      </ul class="navbar-nav">
-        <li class="nav-item active">
-          <a href= "#" class="nav-link active"> <%= current_user&.name %> </a>
-        </li>
-      </ul>
+      
+      <a href= "#" class="nav-link active"> <%= current_user&.name %> </a>
 
 
     </nav>
