link logo image to home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <nav class= "navbar navbar-expand-md navbar-light bg-primary">
-      <a href="#" class="navbar-brand mb-0 "> <img src="https://w7.pngwing.com/pngs/610/106/png-transparent-brand-line-line-angle-text-logo-thumbnail.png" width="50" height="50"/></a>
+      <a href="<%= url_for(controller: 'jobs', action: 'index' ) %>" class="navbar-brand mb-0 "> <img src="https://w7.pngwing.com/pngs/610/106/png-transparent-brand-line-line-angle-text-logo-thumbnail.png" width="50" height="50"/></a>
 
       <button
         type="button"
