--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,16 +46,15 @@
           <% end %>
         </ul>
       </div>
+
       <form class="d-flex">
         <input type="text" class="form-control me-2">
         <button type="submit" class="btn btn-primary"> Search</button>
       </form>
 
-      </ul class="navbar-nav">
-        <li class="nav-item active">
-          <a href= "#" class="nav-link active"> <%= current_user&.name %> </a>
-        </li>
-      </ul>
+      <p class="navbar-nav">
+        <a href= "#" class="nav-link active"> <%= current_user&.name %> </a>
+      </p>
 
 
     </nav>
