added companies + footer

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,8 +1,8 @@
 <h1>List of Companies</h1>
 
 <% @companies.each do |company| %>
-<p> <%= company.name %> </p>
-<p> <img src="<%= company.logo %>" width=50%, height=50%> </p>
+<h2> <%= company.name %> </h2>
+<p> <img src="<%= company.logo %>" width=30%, height=30%> </p>
 <p> <%= company.description %>
 <p> <%= %>
 <hr>
