--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -3,27 +3,27 @@
 <%= form_with method: "post", url: "/profiles" do |form| %>
   <div>
     <%= form.label :name %>
-    <%= form.name_field :name %>
+    <%= form.text_field :name %>
   </div>
   <div>
     <%= form.label :email %>
-    <%= form.email_field :email %>
+    <%= form.text_field :email %>
   </div>
    <div>
     <%= form.label :experience %>
-    <%= form.experience_field :experience %>
+    <%= form.text_field :experience %>
   </div>
    <div>
     <%= form.label :education %>
-    <%= form.education_field :education %>
+    <%= form.text_field :education %>
   </div>
    <div>
     <%= form.label :skills %>
-    <%= form.skills_field :skills %>
+    <%= form.text_field :skills %>
   </div>
    <div>
     <%= form.label :interest %>
-    <%= form.interest_field :interest %>
+    <%= form.text_field :interest %>
   </div>
   <div>
     <%= form.submit "Submit" %>
