--- a/app/views/general/search.html.erb
+++ b/app/views/general/search.html.erb
@@ -4,7 +4,7 @@
     Found <%= @jobs.count %> jobs, <%= @companies.count %> companies
   </small>
 </p>
-<ul class="nav nav-tabs" id="myTab" role="tablist">
+<ul class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="jobs-tab" data-bs-toggle="tab" data-bs-target="#jobs" type="button" role="tab" aria-controls="jobs" aria-selected="true">Jobs</button>
   </li>
@@ -12,7 +12,7 @@
     <button class="nav-link" id="companies-tab" data-bs-toggle="tab" data-bs-target="#companies" type="button" role="tab" aria-controls="companies" aria-selected="false">Companies</button>
   </li>
 </ul>
-<div class="tab-content" id="myTabContent">
+<div class="tab-content">
   <div class="tab-pane fade show active" id="jobs" role="tabpanel" aria-labelledby="home-tab">
     <% if @jobs.empty? %>
       <p>No jobs found.</p>
@@ -32,7 +32,8 @@
       <% @companies.each do |company| %>
         <h5><%= company.name %></h5>
         <p>
-          <%= company.description %>
+          <%= company.description %><br />
+          <small><a href="<%= company_path(company) %>">More info</a></small>
         </p>
       <% end %>
     <% end %>
