--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       <form class="d-flex" action="<%= url_for(controller: 'general', action: 'search') %>" method="get">
         <input type="text" class="form-control me-2" name="query">
         <button type="submit" class="btn btn-primary"> Search</button>
-      </form> %>
+      </form>
 
       <% if current_user %>
         <p class="navbar-nav">
