fix profile show action

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,7 @@
 <h1>My Profile</h1>
 <h2><%= @current_user.name %></h2>
 <p> Experience: <%= @profile.experience %></p>
-<%# <p> Education: <%= @profile.education %></p>
-<%# <p> Skills: <%= @profile.skills %></p> %>
-<%# <p> Interests: <%= @profile.interest %></p> %>
-<%# <a href="/jobs">Back to Job Board</a> %> %>
+<p> Education: <%= @profile.education %></p>
+<p> Skills: <%= @profile.skills %></p>
+<p> Interests: <%= @profile.interest %></p>
+<a href="/jobs">Back to Job Board</a>
