--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,11 @@
         <button type="submit" class="btn btn-primary"> Search</button>
       </form> %>
 
-      </ul class="navbar-nav">
-        <li class="nav-item active">
+      <% if current_user %>
+        <p class="navbar-nav">
           <a href= "<%= url_for(controller: 'profiles', action: 'create' ) %>" class="nav-link active"> <%= current_user&.name %> </a>
-        </li>
-      </ul>
+        </p>
+      <% end %>
 
 
     </nav>
