--- a/app/views/general/search.html.erb
+++ b/app/views/general/search.html.erb
@@ -13,7 +13,7 @@
   </li>
 </ul>
 <div class="tab-content">
-  <div class="tab-pane fade show active" id="jobs" role="tabpanel" aria-labelledby="home-tab">
+  <div class="tab-pane active" id="jobs" role="tabpanel" aria-labelledby="home-tab">
     <% if @jobs.empty? %>
       <p>No jobs found.</p>
     <% else %>
@@ -25,7 +25,7 @@
       <% end %>
     <% end %>
   </div>
-  <div class="tab-pane fade" id="companies" role="tabpanel" aria-labelledby="profile-tab">
+  <div class="tab-pane" id="companies" role="tabpanel" aria-labelledby="profile-tab">
     <% if @companies.empty? %>
       <p>No companies found.</p>
     <% else %>
